--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .title {
+        @apply leading-[55px] font-normal text-[45px] text-center
+    }
+}
